--- a/hu_wuhu_upgrade.adoc
+++ b/hu_wuhu_upgrade.adoc
@@ -19,7 +19,7 @@ The new Host Utilities installation package must be in a path that is accessible
 
 [role="tabbed-block"]
 ====
-.Upgrade the Host Utilities interactively
+.Upgrade interactively
 --
 To upgrade the Host Utilities software package interactively, you must run the Host Utilities installation program and follow the prompts.
 
@@ -33,7 +33,7 @@ To upgrade the Host Utilities software package interactively, you must run the H
 .. Go to *Program and features* and check the host utility version.
 --
 
-.Upgrade the Host Utilities from a command line
+.Upgrade from a command line
 --
 You can perform a quiet (unattended) upgrade of the new Host Utilities by entering the appropriate commands at the Windows command prompt.
 
