--- a/hu_wuhu_troubleshoot.adoc
+++ b/hu_wuhu_troubleshoot.adoc
@@ -17,18 +17,18 @@ summary: Windows Unified Host Utilities includes an installation program that se
 [.lead]
 You can use the general troubleshooting techniques for Windows Host Utilities. Be sure to check the latest Release Notes for known issues and solutions.
 
-Following are the different areas to identify the possible interoperability issues:
+ The following is a list of the different areas you can investigate for potential interoperability issues:
 
-* To identify potential interoperability issues, you must confirm that the Host Utilities support your combination of host operating system software, host hardware, ONTAP software, and storage system hardware. See the http://mysupport.netapp.com/matrix[NetApp Interoperability Matrix Tool^] for more information.
-* You must verify that you have the correct iSCSI configuration.
-* If iSCSI LUNs are not available after a reboot, you must verify that the target is listed as persistent on the *Persistent Targets* tab of the Microsoft iSCSI initiator GUI.
-* If applications using the LUNs display errors on startup, you must verify that the applications are configured to depend on the iSCSI service.
-* For FC paths to storage controllers running ONTAP, you must verify that the FC switches are zoned using the WWPNs of the target LIFs, not the WWPNs of the physical ports on the node.
-* You must review the link:hu_wuhu_71_rn.html[Release Notes] for Windows Host Utilities to check for known issues. The Release Notes include a list of known issues and limitations.
+* To identify potential interoperability issues, confirm that the Host Utilities support your combination of host operating system software, host hardware, ONTAP software, and storage system hardware. See the http://mysupport.netapp.com/matrix[NetApp Interoperability Matrix Tool^] for more information.
+* Verify that you have the correct iSCSI configuration.
+* If iSCSI LUNs are not available after a reboot, verify that the target is listed as persistent on the *Persistent Targets* tab of the Microsoft iSCSI initiator GUI.
+* If applications using the LUNs display errors on startup, verify that the applications are configured to depend on the iSCSI service.
+* For FC paths to storage controllers running ONTAP, verify that the FC switches are zoned using the WWPNs of the target LIFs, not the WWPNs of the physical ports on the node.
+* Review the link:hu_wuhu_71_rn.html[Release Notes] for Windows Host Utilities to check for known issues. The Release Notes include a list of known issues and limitations.
 * Review the troubleshooting information in the SAN Administration Guide for your version of ONTAP.
 * Search https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] for recently discovered issues.
-** In the Bug Type field under Advanced Search, you should select *iSCSI - Windows* and then select *Go*. You should repeat the search for Bug Type *FCP -Windows*.
-* You must collect information about your system.
+** In the Bug Type field under Advanced Search, select *iSCSI - Windows* and then select *Go*. You should repeat the search for Bug Type *FCP -Windows*.
+* Collect information about your system.
 * Record any error messages that are displayed on the host or storage system console.
 * Collect the host and storage system log files.
 * Record the symptoms of the problem and any changes made to the host or storage system just before the problem appeared.
