--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -102,7 +102,7 @@ For Hyper-V guests, raw (pass-through) disks do not appear in the guest OS if yo
 
 
 
-You can install the host utilities interactively or using the command line. 
+You can install the host utilities interactively or using the command line. The new Host Utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the Host Utilities interactively or from the Windows command line.
 
 [role="tabbed-block"]
 ====
@@ -121,7 +121,7 @@ To install the Host Utilities software package interactively, you must run the H
 --
 .Install the Host Utilities from a command line
 --
-You can perform a quiet (unattended) installation of the Host Utilities by entering the appropriate commands at a Windows command prompt. The Host Utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the Host Utilities interactively to obtain the installation package. The system automatically reboots when the installation is complete.
+You can perform a quiet (unattended) installation of the Host Utilities by entering the appropriate commands at a Windows command prompt. The system automatically reboots when the installation is complete.
 
 .Steps
 
