--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -100,7 +100,7 @@ You must specify whether to include multipathing support when you install the Wi
 The MPIO selection is not available for Windows XP and Windows Vista systems; multipath I/O is not supported on these guest operating systems.
 For Hyper-V guests, raw (pass-through) disks do not appear in the guest OS if you choose multipathing support. You can either use raw disks, or you can use MPIO, but you cannot use both in the guest OS.
 
-You can install the host utilities interactively or using the command line. 
+You can install the host utilities interactively or using the command line. The new Host Utilities installation package must be in a path that is accessible by the Windows host. Follow the instructions for installing the Host Utilities interactively or from the Windows command line.
 
 [role="tabbed-block"]
 ====
@@ -121,10 +121,7 @@ To install the Host Utilities software package interactively, you must run the h
 .Install the host utilities from a command line
 --
 
-You can perform a quiet (unattended) installation of the host utilities by entering the appropriate commands at the Windows command prompt.
-The host utilities installation package must be in a path that is accessible by the Windows host. 
-
-Follow the instructions for installing the host utilities interactively to obtain the installation package. The system automatically reboots when the installation is complete.
+You can perform a quiet (unattended) installation of the host utilities by entering the appropriate commands at the Windows command prompt. The system automatically reboots when the installation is complete.
 
 .Steps
 
