--- a/hu_wuhu_hba_settings.adoc
+++ b/hu_wuhu_hba_settings.adoc
@@ -412,7 +412,7 @@ The driver parameters appear.
 
 .QLogic HBA drivers
 --
-On FC systems, you need to verify the QLogic HBA driver settings. These settings must exist for each port on the HBA.
+On FC systems, you must verify the QLogic HBA driver settings. These settings must exist for each port on the HBA.
 
 .Steps
 
