--- a/hu_wuhu_71.adoc
+++ b/hu_wuhu_71.adoc
@@ -15,7 +15,7 @@ summary: Windows Unified Host Utilities includes an installation program that se
 :imagesdir: ./media/
 
 [.lead]
-The Windows Unified Host Utilities enable you to connect a Windows host computer to NetApp storage systems.
+The Windows Unified Host Utilities (WUHU) enable you to connect a Windows host computer to NetApp storage systems.
 
 The Windows Unified Host Utilities supports the following versions of Windows:
 
@@ -59,7 +59,7 @@ Before you install the Host Utilities, you must verify that the Host Utilities v
 . Check the hotfixes required for the respective host on the link:https://docs.netapp.com/us-en/ontap-sanhost/index.html[SAN host Windows documentation].
 +
 [NOTE]
-link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] document provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the host configurations category to find the relevant hotfix information for earlier versions of Windows server.
+The link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html[Using Windows server 2022 with ONTAP] document provides instructions on link:https://docs.netapp.com/us-en/ontap-sanhost/hu_windows_2022.html#installing-windows-hotfixes[installing Windows hotfixes] for Windows server 2022. Refer to the  Windows documents in the host configurations category to find the relevant hotfix information for earlier versions of Windows server.
 
 . Add the iSCSI or FCP license and start the target service.
 +
@@ -107,7 +107,7 @@ You can install the host utilities interactively or using the command line. The 
 [role="tabbed-block"]
 ====
 
-.Install the Host Utilities interactively
+.Install interactively
 --
 .Steps
 To install the Host Utilities software package interactively, you must run the Host Utilities installation program and follow the prompts.
@@ -119,7 +119,7 @@ To install the Host Utilities software package interactively, you must run the H
 . Run the `netapp_windows_host_utilities_7.1_x64` file and follow the instructions on the screen.
 . Reboot the Windows host when prompted.
 --
-.Install the Host Utilities from a command line
+.Install from a command line
 --
 You can perform a quiet (unattended) installation of the Host Utilities by entering the appropriate commands at a Windows command prompt. The system automatically reboots when the installation is complete.
 
