--- a/hu_wuhu_hba_settings.adoc
+++ b/hu_wuhu_hba_settings.adoc
@@ -5,7 +5,7 @@ keywords: windows, host, utilities, 7.1, hba, fibre, channel, SANtricity, netapp
 summary: Windows Unified Host Utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 ---
 
-= Repair and remove Windows Host Utilities
+= Configure registry settings
 :toc: macro
 :hardbreaks:
 :toclevels: 1
