update to sles 15 sp5 doc

--- a/nvme_sles15_sp5.adoc
+++ b/nvme_sles15_sp5.adoc
@@ -141,11 +141,11 @@ In this example, one initiator port is enabled and connected with two target LIF
 ----
 NVME Initiator Enabled
 XRI Dist lpfc0 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc0 WWPN x100000109b579d5e WWNN x200000109b579d5e DID x011c00 ONLINE
+NVME LPORT lpfc0 WWPN x100000109b579d5e WWNN x200000109b579d5e DID x011c00 *ONLINE*
 NVME RPORT WWPN x208400a098dfdd91 WWNN x208100a098dfdd91 DID x011503
-TARGET DISCSRVC ONLINE
+*TARGET DISCSRVC ONLINE*
 NVME RPORT WWPN x208500a098dfdd91 WWNN x208100a098dfdd91 DID x010003
-TARGET DISCSRVC ONLINE
+*TARGET DISCSRVC *ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000e49 Cmpl 0000000e49 Abort 00000000
@@ -157,11 +157,11 @@ FCP CMPL: xb 000014f4 Err 00012abd
 
 NVME Initiator Enabled
 XRI Dist lpfc1 Total 6144 IO 5894 ELS 250
-NVME LPORT lpfc1 WWPN x100000109b579d5f WWNN x200000109b579d5f DID x011b00 ONLINE
+NVME LPORT lpfc1 WWPN x100000109b579d5f WWNN x200000109b579d5f DID x011b00 *ONLINE*
 NVME RPORT WWPN x208300a098dfdd91 WWNN x208100a098dfdd91 DID x010c03
-TARGET DISCSRVC ONLINE
+*TARGET DISCSRVC ONLINE*
 NVME RPORT WWPN x208200a098dfdd91 WWNN x208100a098dfdd91 DID x012a03
-TARGET DISCSRVC ONLINE
+*TARGET DISCSRVC ONLINE*
 
 NVME Statistics
 LS: Xmt 0000000e50 Cmpl 0000000e50 Abort 00000000
