Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/nvme_ubuntu_2204.adoc
+++ b/nvme_ubuntu_2204.adoc
@@ -28,7 +28,7 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 == Features
 
-Ubuntu 22.04 has in-kernel NVMe multipath enabled for NVMe namespaces by default, therefore, there is no need for explicit settings.
+Ubuntu 22.04 has in-kernel NVMe multipath enabled for NVMe namespaces by default. Therefore, there is no need for explicit settings.
 
 == Known limitations
 
