Apply suggestions from code review
Co-authored-by: Paula Carrigan <77334475+netapp-pcarriga@users.noreply.github.com>

--- a/nvme_ubuntu_2204.adoc
+++ b/nvme_ubuntu_2204.adoc
@@ -41,7 +41,7 @@ You can use the following procedure to validate the minimum supported Ubuntu 22.
 
 .Steps
 
-. Install Ubuntu 22.04 on the server. After the installation is complete, verify that you are running the specified Ubuntu 22.04 kernel. 
+. Install Ubuntu 22.04 on the server. After the installation is complete, verify that you are running the specified Ubuntu 22.04 kernel:
 +
 ----
 # uname -r
