--- a/overview.adoc
+++ b/overview.adoc
@@ -13,15 +13,18 @@ summary: This content provides distribution-specific guidance on how to configur
 :linkattrs:
 :imagesdir: ./media/
 
-This content provides host and version-specific best practices to quickly configure SAN hosts connected to ONTAP storage.  
+[.lead]
+The NetApp Host Utilities tools enable you to connect SAN hosts to virtual disks (LUNs) on NetApp storage systems.
 
-Your SAN hosts and ONTAP storage can reside either on-premises, in the cloud, or both.  
+Use the host and version-specific configuration documentation to quickly configure SAN hosts connected to ONTAP storage.
+
+Your SAN hosts and ONTAP storage can reside either on-premises, in the cloud, or both.
 
 NOTE: In a cloud environment, hosts are typically referred to as clients. All host-specific information in this content also applies to cloud clients.
 
-For example, you can configure on-premises ONTAP storage to connect to on-premises SAN hosts or to connect to SAN cloud clients.  You could also configure link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^] or link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for ONTAP^] to connect to on-premises SAN hosts or to connect to SAN cloud clients.
+For example, you can configure on-premises ONTAP storage, link:https://docs.netapp.com/us-en/cloud-manager-cloud-volumes-ontap/index.html[Cloud Volumes ONTAP^], or link:https://docs.netapp.com/us-en/cloud-manager-fsx-ontap/index.html[Amazon FSx for NetApp ONTAP^] to connect to on-premises SAN hosts or SAN cloud clients. 
 
-Correct configuration is important for best performance and successful failover.  
+Correct configuration is important for best performance and successful failover. Use the recommendations outlined in the documentation to optimize the performance of SAN hosts.
 
 .Related information
 
