--- a/nvme_rhel_94.adoc
+++ b/nvme_rhel_94.adoc
@@ -376,19 +376,19 @@ nvme discover -t tcp -w host-traddr -a traddr
 #nvme discover -t tcp -w 192.168.167.6 -a 192.168.167.8
 ----
 
-. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
+. Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes:
 +
 ----
-nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
+nvme connect-all -t tcp -w host-traddr -a traddr
 ----
 +
 *Example output:*
 +
 ----
-#	nvme	connect-all	-t	tcp	-w	192.168.166.1	-a	192.168.166.16 -l	1800							
-#	nvme	connect-all	-t	tcp	-w	192.168.166.1	-a	192.168.166.17 -l	1800							
-#	nvme	connect-all	-t	tcp	-w	192.168.167.1	-a	192.168.167.16 -l	1800							
-#	nvme	connect-all	-t	tcp	-w	192.168.167.1	-a	192.168.167.17 -l	1800							
+#	nvme	connect-all	-t	tcp	-w	192.168.166.6	-a	192.168.166.7							
+#	nvme	connect-all	-t	tcp	-w	192.168.166.6	-a	192.168.166.8 						
+#	nvme	connect-all	-t	tcp	-w	192.168.167.6	-a	192.168.167.7 						
+#	nvme	connect-all	-t	tcp	-w	192.168.167.6	-a	192.168.167.8						
 ----
 
 [NOTE]
