--- a/nvme_rhel_94.adoc
+++ b/nvme_rhel_94.adoc
@@ -243,7 +243,9 @@ include::_include/nvme/reuse_nvme_enabling_broadcom_1mb_size.adoc[]
 
 == Configure NVMe/TCP
 
-include::_include/nvme/reuse_configure_nvmetcp.adoc[]
+NVMe/TCP does not have an auto-connect functionality. Therefore, we need to perform the NVMe/TCP connect or connect-all functionality manually to discover the NVMe/TCP subsystems and namespaces.
+
+You can use the following procedure to configure NVMe/TCP.
 
 .Steps
 
@@ -385,7 +387,7 @@ nvme connect-all -t tcp -w host-traddr -a traddr
 ----
 
 [NOTE]
-Beginning with RHEL 9.4, the NVMe/TCP `ctrl_loss_tmo` timeout behaviour is set to infinity by default. Therefore, there is no need to configure a specific timeout period. With default behaviour NVMe/TCP will not timeout and will remain connected indefinitely, eliminating the need for setting a timeout for nvme connect/connect-all (argument -l) in the event of path failure.
+Beginning with RHEL 9.4, the NVMe/TCP `ctrl_loss_tmo` timeout behaviour is set to infinity by default. Therefore, there is no need to configure a specific timeout period. With default behaviour NVMe/TCP will not timeout and will remain connected indefinitely, eliminating the need for setting a timeout for `nvme connect` or `nvme connect-all` (`argument -1`) in the event of path failure.
 
 
 == Validate NVMe-oF
