--- a/hu_vsphere_8.adoc
+++ b/hu_vsphere_8.adoc
@@ -313,6 +313,6 @@ The VMware vSphere 8.x with ONTAP release has the following known issues:
 
 * link:https://docs.netapp.com/us-en/netapp-solutions/virtualization/vsphere_ontap_ontap_for_vsphere.html[TR-4597-VMware vSphere with ONTAP^]
 * link:https://kb.vmware.com/s/article/2031038[VMware vSphere 5.x, 6.x and 7.x support with NetApp MetroCluster (2031038)^]
-* link:https://kb.vmware.com/s/article/83370[NetApp ONTAP with NetApp SnapMirror Business Continuity (SM-BC) with VMware vSphere Metro Storage Cluster (vMSC)^]
+* link:https://kb.vmware.com/s/article/83370[NetApp ONTAP with NetApp SnapMirror active sync with VMware vSphere Metro Storage Cluster (vMSC)^]
 
 //BURT 152563 20-Jan-2023
