--- a/nvme_esxi_8.adoc
+++ b/nvme_esxi_8.adoc
@@ -255,6 +255,6 @@ that use NVMe fused commands (for example, ESX) and Fibre Channel (FC) transport
 
 link:https://docs.netapp.com/us-en/netapp-solutions/virtualization/vsphere_ontap_ontap_for_vsphere.html[TR-4597-VMware vSphere with ONTAP^]
 link:https://kb.vmware.com/s/article/2031038[VMware vSphere 5.x, 6.x and 7.x support with NetApp MetroCluster  (2031038)^]
-link:https://kb.vmware.com/s/article/83370[VMware vSphere 6.x and 7.x support with NetApp® SnapMirror® Business Continuity (SM-BC)^]
+link:https://kb.vmware.com/s/article/83370[VMware vSphere 6.x and 7.x support with NetApp SnapMirror active sync^]
 
 //BURT 1525630 20-Jan-2023
