--- a/nvme_rhel_810.adoc
+++ b/nvme_rhel_810.adoc
@@ -262,7 +262,7 @@ nvme discover -t tcp -w host-traddr -a traddr
 *Example output:*
 +
 ----
-# nvme discover -t tcp -w 192.168.111.79 -a 192.168.111.14 -l 1800
+# nvme discover -t tcp -w 192.168.2.31 -a 192.168.2.25
 
 Discovery Log Number of Records 8, Generation counter 18
 =====Discovery Log Entry 0======
@@ -272,8 +272,8 @@ subtype: unrecognized
 treq:    not specified.
 portid:  0
 trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b: discovery
-traddr:  192.168.211.15
+subnqn:  nqn.1992-08.com.netapp:sn.a1b2b785b9de11ee8e7fd039ea9e8ae9:discovery: discovery
+traddr:  192.168.1.25
 sectype: none
 =====Discovery Log Entry 1======
 trtype:  tcp
@@ -282,10 +282,9 @@ subtype: unrecognized
 treq:    not specified.
 portid:  1
 trsvcid: 8009
-subnqn:  nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b: discovery
-traddr:  192.168.111.15
+subnqn:  nqn.1992-08.com.netapp:sn.a1b2b785b9de11ee8e7fd039ea9e8ae9:discovery
+traddr:  192.168.2.26
 sectype: none ..........
-
 
 ----
 
@@ -298,11 +297,10 @@ nvme discover -t tcp -w host-traddr -a traddr
 *Example output:*
 +
 ----
-# nvme	discovery	-t   tcp    -w	192.168.111.79   -a	192.168.111.14
-# nvme	discovery	-t   tcp    -w	192.168.111.79   -a	192.168.111.15
-# nvme	discovery	-t   tcp    -w	192.168.211.79   -a	192.168.211.14
-# nvme	discovery	-t   tcp    -w	192.168.211.79   -a	192.168.211.15
-
+# nvme	discovery	-t   tcp    -w	192.168.2.31   -a	192.168.2.25
+# nvme	discovery	-t   tcp    -w	192.168.1.31   -a	192.168.1.24
+# nvme	discovery	-t   tcp    -w	192.168.2.31   -a	192.168.2.26
+# nvme	discovery	-t   tcp    -w	192.168.1.31   -a	192.168.1.25
 
 ----
 
@@ -315,11 +313,10 @@ nvme connect-all -t tcp -w host-traddr -a traddr -l 1800
 *Example output:*
 +
 ----
-# nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.14	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.111.79	-a	192.168.111.15	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.14	-l	1800
-# nvme	connect-all	-t	tcp	-w	192.168.211.79	-a	192.168.211.15	-l	1800
-
+# nvme	connect-all	-t	tcp	-w	192.168.2.31	-a	192.168.2.25	-l 1800
+# nvme	connect-all	-t	tcp	-w	192.168.1.31	-a	192.168.1.24	-l 1800
+# nvme	connect-all	-t	tcp	-w	192.168.2.31	-a	192.168.2.26	-l 1800
+# nvme	connect-all	-t	tcp	-w	192.168.1.31	-a	192.168.1.25	-l 1800
 
 ----
 
@@ -363,7 +360,7 @@ round-robin
 ----
 Node         SN                   Model                          
 ---------------------------------------------------------  
-/dev/nvme0n1 81Gx7NSiKSQqAAAAAAAB	NetApp ONTAP Controller
+/dev/nvme0n1 81K1ABVnkwbNAAAAAAAB	NetApp ONTAP Controller
                                
 
 Namespace Usage    Format             FW             Rev
@@ -379,17 +376,19 @@ Namespace Usage    Format             FW             Rev
 .NVMe/FC
 --
 ----
-# nvme list-subsys /dev/nvme3n1 
+# nvme list-subsys /dev/nvme0n1
 ----
 
 *Example output:*
 [subs=+quotes]
 ----
-nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.8e501f8ebafa11ec9b99d039ea359e4b:subsystem.rhel_163_Qle2742 
-+- nvme0 *fc* traddr=nn-0x204dd039ea36a105:pn-0x2050d039ea36a105 host_traddr=nn-0x20000024ff7f4994:pn-0x21000024ff7f4994 *live non-optimized*
-+- nvme1 *fc* traddr=nn-0x204dd039ea36a105:pn-0x2050d039ea36a105 host_traddr=nn-0x20000024ff7f4994:pn-0x21000024ff7f4994 *live non-optimized*
-+- nvme2 *fc* traddr=nn-0x204dd039ea36a105:pn-0x204fd039ea36a105 host_traddr=nn-0x20000024ff7f4995:pn-0x21000024ff7f4995 *live optimized*
-+- nvme3 *fc* traddr=nn-0x204dd039ea36a105:pn-0x204ed039ea36a105 host_traddr=nn-0x20000024ff7f4994:pn-0x21000024ff7f4994 *live optimized* 
+nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.0cd9ee0dc0ec11ee8e7fd039ea9e8ae9:subsystem.nvme
+\
+ +- nvme1 fc traddr=nn-0x2005d039eaa7dfc8:pn-0x2086d039eaa7dfc8 host_traddr=nn-0x20000024ff752e6d:pn-0x21000024ff752e6d live *non-optimized*
+ +- nvme2 fc traddr=nn-0x2005d039eaa7dfc8:pn-0x2016d039eaa7dfc8 host_traddr=nn-0x20000024ff752e6c:pn-0x21000024ff752e6c live *optimized*
+ +- nvme3 fc traddr=nn-0x2005d039eaa7dfc8:pn-0x2081d039eaa7dfc8 host_traddr=nn-0x20000024ff752e6c:pn-0x21000024ff752e6c live *non-optimized*
+ +- nvme4 fc traddr=nn-0x2005d039eaa7dfc8:pn-0x2087d039eaa7dfc8 host_traddr=nn-0x20000024ff752e6d:pn-0x21000024ff752e6d live *optimized* 
+
 
 ----
 --
@@ -402,11 +401,12 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.8e501f8ebafa11ec9b99d039ea359e4b:su
 *Example output:*
 [subs=+quotes]
 ----
-nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:subsystem.rhel_tcp_165\
-+- nvme0 *tcp* traddr=192.168.111.15 trsvcid=4420 host_traddr=192.168.111.79 *live non-optimized*
-+- nvme1 *tcp* traddr=192.168.111.14 trsvcid=4420 host_traddr=192.168.111.79 *live optimized*
-+- nvme2 *tcp* traddr=192.168.211.15 trsvcid=4420 host_traddr=192.168.211.79 *live non-optimized*
-+- nvme3 *tcp* traddr=192.168.211.14 trsvcid=4420 host_traddr=192.168.211.79 *live optimized*
+nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.a1b2b785b9de11ee8e7fd039ea9e8ae9:subsystem.nvme_tcp_1
+\
+ +- nvme0 tcp traddr=192.168.2.26 trsvcid=4420 host_traddr=192.168.2.31 live *non-optimized*
+ +- nvme1 tcp traddr=192.168.2.25 trsvcid=4420 host_traddr=192.168.2.31 live *optimized*
+ +- nvme2 tcp traddr=192.168.1.25 trsvcid=4420 host_traddr=192.168.1.31 live *non-optimized*
+ +- nvme3 tcp traddr=192.168.1.24 trsvcid=4420 host_traddr=192.168.1.31 live *optimized*
 
 ----
 --
@@ -427,12 +427,13 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.154a5833c78c11ecb069d039ea359e4b:su
 ----
 Device        Vserver   Namespace Path                                                          
 ----------------------- ------------------------------ 
-/dev/nvme0n1 vs_tcp79           /vol/vol1/ns
+/dev/nvme0n1 tcpiscsi_129           /vol/tcpnvme_1_0_0/tcpnvme_ns
+
 
               
 NSID       UUID                                   Size
 ------------------------------------------------------------
-1          aa197984-3f62-4a80-97de-e89436360cec	21.47GB
+1          05c2c351-5d7f-41d7-9bd8-1a56c	        21.47GB
 ----
 --
 .JSON
@@ -447,16 +448,15 @@ NSID       UUID                                   Size
   "ONTAPdevices”: [
     {
       "Device”: "/dev/nvme0n1",
-      "Vserver”: "vs_tcp79",
-      "Namespace Path”: "/vol/vol1/ns",
+      "Vserver”: "tcpiscsi_129",
+      "Namespace Path”: /vol/tcpnvme_1_0_0/tcpnvme_ns ",
       "NSID”: 1,
-      "UUID”: "aa197984-3f62-4a80-97de-e89436360cec",
+      "UUID”: " 05c2c351-5d7f-41d7-9bd8-1a56c160c80b ",
       "Size”: "21.47GB",
       "LBA_Data_Size”: 4096,
       "Namespace Size" : 5242880
     },
-]
-
+  ]
 }
 
 
