--- a/nvme_rhel_810.adoc
+++ b/nvme_rhel_810.adoc
@@ -61,10 +61,13 @@ rpm -qa|grep nvme-cli
 nvme-cli-1.16-9.el8.x86_64
 ----
 
-. Enable in -kernel NVMe multipath:
+. Enable in-kernel NVMe multipath:
++
+*Example*
 +
 ----
-# grubby --args=nvme_core.multipath=Y --update-kernel /boot/vmlinuz-4.18.0-513.5.1.el8_9.x86_64
+# grubby --args=nvme_core.multipath=Y --update-kernel 
+/boot/vmlinuz-4.18.0-513.5.1.el8_9.x86_64
 ----
 
 . On the host, check the host NQN string at `/etc/nvme/hostnqn`:
@@ -425,9 +428,9 @@ nvme-subsys0 - NQN=nqn.1992-08.com.netapp:sn.a1b2b785b9de11ee8e7fd039ea9e8ae9:su
 *Example output:*
 
 ----
-Device        Vserver   Namespace Path                                                          
------------------------ ------------------------------ 
-/dev/nvme0n1 tcpiscsi_129           /vol/tcpnvme_1_0_0/tcpnvme_ns
+Device        Vserver       Namespace Path                                                          
+----------------------------------------------------- 
+/dev/nvme0n1  tcpiscsi_129  /vol/tcpnvme_1_0_0/tcpnvme_ns
 
 
               
@@ -445,15 +448,15 @@ NSID       UUID                                   Size
 *Example output*
 ----
 {
-  "ONTAPdevices”: [
+  "ONTAPdevices": [
     {
-      "Device”: "/dev/nvme0n1",
-      "Vserver”: "tcpiscsi_129",
+      "Device": "/dev/nvme0n1",
+      "Vserver": "tcpiscsi_129",
       "Namespace Path”: /vol/tcpnvme_1_0_0/tcpnvme_ns ",
-      "NSID”: 1,
-      "UUID”: " 05c2c351-5d7f-41d7-9bd8-1a56c160c80b ",
-      "Size”: "21.47GB",
-      "LBA_Data_Size”: 4096,
+      "NSID": 1,
+      "UUID": " 05c2c351-5d7f-41d7-9bd8-1a56c160c80b ",
+      "Size2: "21.47GB",
+      "LBA_Data_Size": 4096,
       "Namespace Size" : 5242880
     },
   ]
