--- a/nvme_rhel_88.adoc
+++ b/nvme_rhel_88.adoc
@@ -303,10 +303,10 @@ nvme discover -t tcp -w host-traddr -a traddr
 *Example output:*
 +
 ----
-# nvme	discovery	-t   tcp    -w	192.168.111.79   -a	192.168.111.14
-# nvme	discovery	-t   tcp    -w	192.168.111.79   -a	192.168.111.15
-# nvme	discovery	-t   tcp    -w	192.168.211.79   -a	192.168.211.14
-# nvme	discovery	-t   tcp    -w	192.168.211.79   -a	192.168.211.15
+# nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.14
+# nvme	discover	-t   tcp    -w	192.168.111.79   -a	192.168.111.15
+# nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.14
+# nvme	discover	-t   tcp    -w	192.168.211.79   -a	192.168.211.15
 ----
 
 . Run the `nvme connect-all` command across all the supported NVMe/TCP initiator-target LIFs across the nodes, and set the controller loss timeout period for at least 30 minutes or 1800 seconds:
