--- a/hu_solaris_113.adoc
+++ b/hu_solaris_113.adoc
@@ -206,6 +206,6 @@ The Solaris 11.3 with ONTAP release has the following known issues:
 | Title
 | Description
 | Oracle ID
-| 1366780 | Solaris LIF problem during GB with Emulex 32G HBA on x86 Arch | Seen with Emulex Firmware version 12.6.x and later on x86_64 Platform | SR 3-24746803021
-| 1368957 | Solaris 11.x 'cfgadm -c configure' resulting in I/O error with End-to-End Emulex configuration | Running `cfgadm -c configure` on Emulex end-to-end configurations results in I/O error. This is fixed in ONTAP 9.5P17, 9.6P14, 9.7P13 and 9.8P2 | Not Applicable
+| link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1366780[1366780^] | Solaris LIF problem during GB with Emulex 32G HBA on x86 Arch | Seen with Emulex Firmware version 12.6.x and later on x86_64 Platform | SR 3-24746803021
+| link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1368957[1368957^] | Solaris 11.x 'cfgadm -c configure' resulting in I/O error with End-to-End Emulex configuration | Running `cfgadm -c configure` on Emulex end-to-end configurations results in I/O error. This is fixed in ONTAP 9.5P17, 9.6P14, 9.7P13 and 9.8P2 | Not Applicable
 |===
