Apply suggestions from code review
Co-authored-by: Aoife Hegarty <92876203+netapp-aoife@users.noreply.github.com>

--- a/hu_rhel_810.adoc
+++ b/hu_rhel_810.adoc
@@ -46,7 +46,7 @@ vs_25_2742                 /vol/fc_vol_1_4/dynamic_lun   /dev/sdt      host9    
 == SAN booting
 
 .What you'll need
-If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt.jsp?components=91241;&solution=236&isHWU&src=IMT[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
+If you decide to use SAN booting, it must be supported by your configuration. You can use the link:https://mysupport.netapp.com/matrix/imt[NetApp Interoperability Matrix Tool^] to verify that your OS, HBA, HBA firmware and the HBA boot BIOS, and ONTAP version are supported.
 
 include::_include/hu/reuse_hu_san_booting_steps.adoc[]
 
