--- a/nvme_rhel_810.adoc
+++ b/nvme_rhel_810.adoc
@@ -19,7 +19,7 @@ NVMe over Fabrics (NVMe-oF), including NVMe over Fibre Channel (NVMe/FC) and oth
 
 The following support is available for NVMe-oF host configuration for RHEL 8.10 with ONTAP:
 
-* Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native nvme-cli package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
+* Support for NVMe over TCP (NVMe/TCP) in addition to NVMe/FC. The NetApp plug-in in the native `nvme-cli` package displays ONTAP details for both NVMe/FC and NVMe/TCP namespaces.
 
 For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[NetApp Interoperability Matrix Tool^].
 
@@ -49,7 +49,7 @@ You can use the following procedure to enable in-kernel multipath.
 4.18.0-553.el8_10.x86_64 
 ----
 
-. Install the nvme-cli package: 
+. Install the `nvme-cli` package: 
 +
 ----
 rpm -qa|grep nvme-cli
@@ -470,7 +470,7 @@ NSID       UUID                                   Size
 
 == Known issues
 
-The NVMe-oF host configuration for RHEL 8.10 with ONTAP release has the following known issue:
+The NVMe-oF host configuration for RHEL 8.10 with ONTAP has the following known issue:
 
 [cols="10,30,30,10",options="header"]
 |===
